--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="{% static 'style.css' %}" >
   </head>
   <body>
+  <div class="container ">
     <h1>articles list</h1>
     {% for article in articles %}
     <h2><a href="#">{{article.title}}</a><h2>
     <p>{{article.snippet}}</p>
     <p>{{article.date}}</p>
     </p>
+  </div>
     {% endfor %}
   </body>
 </html>
