--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>articles</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}" >
-  </head>
-  <body>
-  <div class="container ">
+{%extends 'base.html'%}
+
+{%block title%}
+articles
+{%endblock%}
+{%block content%}
+  <div class="container">
     <h1>articles list</h1>
     {% for article in articles %}
     <h2><a href="#">{{article.title}}</a><h2>
@@ -16,5 +13,4 @@
     </p>
   </div>
     {% endfor %}
-  </body>
-</html>
+  {%endblock%}
